--- a/datepicker.html
+++ b/datepicker.html
@@ -13,16 +13,7 @@ ga('send', 'pageview');
 
 </script>
 -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-40548780-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
+</head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
@@ -202,4 +193,13 @@ pageTracker._trackPageview();
 			</tr>
 		</tbody>
 	</table>
-</div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
+</div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try{
+var pageTracker = _gat._getTracker("UA-40548780-1");
+pageTracker._trackPageview();
+} catch(err) {}
+</script></p></footer></div></body></html>
