--- a/search.html
+++ b/search.html
@@ -13,16 +13,7 @@ ga('send', 'pageview');
 
 </script>
 -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-40548780-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script></head><body><div id="header_wrap" class="outer">
+</head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
@@ -66,4 +57,13 @@ pageTracker._trackPageview();
 <gcse:search></gcse:search>
 
 
-</section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
+</section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try{
+var pageTracker = _gat._getTracker("UA-40548780-1");
+pageTracker._trackPageview();
+} catch(err) {}
+</script></p></footer></div></body></html>
