--- a/searchrest.html
+++ b/searchrest.html
@@ -30,19 +30,7 @@
 		-->
 	</header>
 </div>
-<div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><div id="content"></div>
-    <script>
-      function hndlr(response) {
-      	console.log(response)
-      for (var i = 0; i < response.items.length; i++) {
-        var item = response.items[i];
-        // in production code, item.htmlTitle should have the HTML entities escaped.
-        document.getElementById("content").innerHTML += "<br>" + item.htmlTitle;
-      }
-    }
-    </script>
-    <script src="https://www.googleapis.com/customsearch/v1?key=AIzaSyANWjxl_ZL0sGZzvFJ9ssKdbm_owPXYJs4&cx=006105496046926375623:WMX467610434&q=d&callback=hndlr">
-    </script></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
+<div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
