Sample event added

--- a/search.html
+++ b/search.html
@@ -36,12 +36,12 @@
     var cx = '006105496046926375623:WMX467610434';
     var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
     gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx+"&sort=start-date";
+        '//www.google.com/cse/cse.js?cx=' + cx+"&sort=dtstart";
+        
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search enableHistory="true" newWindow="true" ></gcse:search>
-
+	<gcse:search enableHistory="true" newWindow="true" ></gcse:search>
 </div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
