--- a/event_1.html
+++ b/event_1.html
@@ -32,7 +32,7 @@
 </div>
 <div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><div itemscope itemtype="http://data-vocabulary.org/Event">
   ​<a href="http://www.example.com/events/spinaltap" itemprop="url" >
-    <span itemprop="summary">Spinal Tap</span>
+    <span itemprop="summary">Spinal Tap 1</span>
   </a>
    <img itemprop="photo" src="spinal_tap.jpg" />
 
@@ -52,7 +52,7 @@
          <span itemprop="locality">San Francisco</span>, 
          <span itemprop="region">CA</span>
      </span>
-     <span itemprop="geo" itemscope itemtype="http://data-vocabulary.org/​Geo">
+     <span itemprop="geo" itemscope itemtype="111222">
         <meta itemprop="latitude" content="37.774929" />
         <meta itemprop="longitude" content="-122.419416" />
      </span>
