--- a/datepicker.html
+++ b/datepicker.html
@@ -45,6 +45,9 @@
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
+	<p>
+		<a href="https://github.com/babakhani/pwt.datepicker" >github</a>
+	</p>
 	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 	
