--- a/datepicker.html
+++ b/datepicker.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
-<meta name="keywords" content="javascript,datepicker,date,persian,calendar"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
+<meta name="keywords" content="javascript,datepicker,date,persian,calendar"><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
@@ -34,10 +34,7 @@
       $(document).ready(function() {
             prettyPrint();
       })
-
 </script>
-
-
 
 <div class="page-title-box" >
 	<h2>Date Picker  </h2>
@@ -50,9 +47,9 @@
 	</p>
 	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
-	
+	<br/>
 	<h3>Dependency </h3>
-	<a href="http://jquery.org"  >jquery.js </a>1.4 >
+	<a href="http://jquery.org"  >jquery.js</a>1.4 >
 	<br/>
 	Client Side Persain Date library :
 	<br/>
