--- a/persiandate.html
+++ b/persiandate.html
@@ -579,7 +579,7 @@ persianDate().days(); // Number</pre>
 		<code>
 			persianDate#clone
 		</code>
-		before manipulating the persianDate.<a href="#/parsing/cloning/">More info on cloning.</a>
+		before manipulating the persianDate.<a href="#/parsing/clone/">More info on cloning.</a>
 	</p>
 </article>
 
