Add Hedaer Menu

--- a/persiandate.html
+++ b/persiandate.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
-<meta name="keywords" content="javascript,datepicker,date,persian,calendar"><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
+<meta name="keywords" content="javascript,datepicker,date,persian,calendar"><script src="js/jquery.js"></script>
+<script src="js/main.js"></script><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
 		</a>
-		
-		<div class="page-git-star-btn" >
-			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianWebToolkit&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
-		</div>
 		<div class="page-gplus-btn" >
 			<div class="g-plusone" data-size="tall" data-annotation="none"></div>
 		</div>
@@ -21,13 +18,15 @@
 		  })();
 		</script>
 		
-		<!--
-		<a id="forkme_banner" href="https://github.com/babakhani/PersianWebToolkit">View on GitHub</a>
-		<section id="downloads">
-		<a class="zip_download_link" href="https://github.com/babakhani/PersianWebToolkit/zipball/master">Download this project as a .zip file</a>
-		<a class="tar_download_link" href="https://github.com/babakhani/PersianWebToolkit/tarball/master">Download this project as a tar.gz file</a>
-		</section>
-		-->
+		
+		<ul id="pageHeaderMenu" class="page-header-menu" >
+			<li>
+				<a projectName="persiandate" href="persiandate.html" >Persian Date</a>
+			</li>
+			<li>
+				<a  projectName="datepicker" href="datepicker.html" >Datepicker</a>
+			</li>
+		</ul>
 	</header>
 </div>
 <div class="page-menu" >
@@ -78,11 +77,7 @@
 			<a href="#/manipulating/start-of/">Start of Time</a>
 
 			<a href="#/manipulating/end-of/">End of Time</a>
-			<!--
-			<a href="#/manipulating/local/">Local</a>
-
-			<a href="#/manipulating/utc/">UTC</a>
-			-->
+		
 		</div>
 	</div>
 
@@ -124,8 +119,6 @@
 <div class="page-title-box" >
 	<h1>Persian Date</h2> 
 	<h6 class="warning-version" >Version Beta 0.1.7</h6>
-		
-		
 		<h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian dates</strong> System. </h2>
 	<p>
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
@@ -133,6 +126,9 @@
 </div>
 <div class="download-box" >
 	<a class="download-item"  href="https://github.com/babakhani/PersianDate/archive/master.zip" > <span class="download-zip"  ></span> <span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span> </a>
+	<div class="page-git-star-btn" >
+			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianDate&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
+	</div>	
 </div>
 
 <br/>
