--- a/datepicker.html
+++ b/datepicker.html
@@ -42,7 +42,7 @@
 		This Date picker work with Iranian calendar .
 	</p>
 	<p>
-		<a href="https://github.com/babakhani/pwt.datepicker" >github</a>
+		<a href="https://github.com/babakhani/pwt.datepicker" >Project on github</a>
 	</p>
 	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
