Add Header Menu

--- a/persiandate.html
+++ b/persiandate.html
@@ -118,7 +118,7 @@
 
 <div class="page-title-box" >
 	<h1>Persian Date</h1> 
-	<h6 class="warning-version" >Version Beta 0.1.7</h6>
+	<h6 class="warning-version" >Beta Version 0.1.7</h6>
 		<h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian dates</strong> System. </h2>
 	<p>
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
