refrence directly to github js files

--- a/datepicker.html
+++ b/datepicker.html
@@ -2,7 +2,7 @@
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
 <meta name="keywords" content="javascript,datepicker,date,persian,calendar"><script src="js/jquery.js"></script>
-<script src="js/main.js"></script><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt-datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/pwt-date.js"></script><script src="js/pwt-datepicker.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
+<script src="js/main.js"></script><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt-datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="https://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js"></script><script src="https://rawgithub.com/babakhani/pwt.datepicker/Develop/js/pwt-datepicker.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
@@ -25,7 +25,7 @@
 
 <div class="page-title-box" >
 	<h1>Date Picker</h1>
-	<h5 class="warning-version" >Beta Version 0.0.2 </h5>
+	<h5 class="warning-version" >Beta Version 0.0.4 </h5>
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
@@ -40,7 +40,7 @@
 	<br/>
 	Client Side Persain Date library :
 	<br/>
-	<a href="js/persainDate.js" download="persainDate.js" >pwt.date.js </a>0.1.6 > 
+	<a href="js/pwt-date.js" download="pwt-date.js" >pwt.date.js </a>0.1.6 > 
 
 </div>
 <div class="download-box" >
@@ -138,7 +138,7 @@
 				<td>observer <span class="minor-version" >0.0.4</span> </td>
 				<td>Boolean</td>
 				<td>false</td>
-				<td>if you use $(element).val() to set input val and 'observer : true' , datepicker sync with your  inputed Value.</td>
+				<td>if you use $(element).val() to set input val and 'observer : true' , datepicker sync with your  inputed Value. Observer Watch input and altField Elemets.</td>
 			</tr>
 			<tr>
 				<td>onShow <span class="minor-version" >0.0.4</span> </td>
