--- a/persiandate.html
+++ b/persiandate.html
@@ -2,7 +2,7 @@
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
 <meta name="keywords" content="javascript,datepicker,date,persian,calendar"><script src="js/jquery.js"></script>
-<script src="js/main.js"></script><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
+<script src="js/main.js"></script><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="https://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
