--- a/persiandate.html
+++ b/persiandate.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-<meta name="description" content="javascript,datepicker,date,persian,calendar">
-<meta name="keywords" content="javascript,datepicker,date,persian,calendar"><script src="js/jquery.js"></script>
+<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><script src="js/jquery.js"></script>
 <script src="js/main.js"></script><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="https://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
+			<div class="page-logo" ></div>
 			<h3 id="project_title">Persian Web Toolkit</h3>
 		</a>
 		<ul id="pageHeaderMenu" class="page-header-menu" >
