add jquery link

--- a/datepicker.html
+++ b/datepicker.html
@@ -25,13 +25,18 @@
 
 <div class="page-title-box" >
 	<h1>Date Picker</h1>
-	<h5 class="warning-version" >Beta Version 0.0.6 </h5>
+	<h5 class="warning-version" >Beta Version 0.2.0 </h5>
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
 	<p>
 		<a href="https://github.com/babakhani/pwt.datepicker" >Project on github</a>
 	</p>
+	<p>
+		<a href="http://plugins.jquery.com/pwt.datepicker/" >Project on Jquery</a>
+	</p>
+	
+	
 	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 	<br/>
