add home page logo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 		</ul>
 	</header>
 </div>
-<div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner">
-<h3>Persian Web Toolkit</h3>
-<p>Some Ui Tools Compatible With Persian Layout And 
+<div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><br/>
+<br/>
+<div class="home-page-logo" >
+</div>
+
+<p >Some Ui Tools Compatible With Persian Layout And 
 	<a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar" >Jalali Calendar</a>
 </p>
 <ul>
