--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
 </div>
 <div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><br/>
 <br/>
-<div class="home-page-logo" >
-</div>
-
-<p >Some Ui Tools Compatible With Persian Layout And 
-	<a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar" >Jalali Calendar</a>
+<div class="home-page-logo" ></div>
+<p >
+	Some Ui Tools Compatible With Persian Layout And <a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar" >Jalali Calendar</a>
 </p>
 <ul>
 	<li>
 		<a href="http://babakhani.github.io/PersianWebToolkit/persiandate"> Persian Date</a>
-		<p>javascript date library for parsing, validating, manipulating, and formatting persian dates System.</p>
-		</li>
-		<li>
-			 <a href="http://babakhani.github.io/PersianWebToolkit/datepicker"> Persian Date Picker</a>
-			<p>jquery datepicker plugin work with Iranian calendar </p>
-		</li>
+		<p>
+			javascript date library for parsing, validating, manipulating, and formatting persian dates System.
+		</p>
+	</li>
+	<li>
+		<a href="http://babakhani.github.io/PersianWebToolkit/datepicker"> Persian Date Picker</a>
+		<p>
+			jquery datepicker plugin work with Iranian calendar
+		</p>
+	</li>
 </ul></section></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
