Change header layout (position :fixed)

--- a/datepicker.html
+++ b/datepicker.html
@@ -17,7 +17,7 @@
 		</ul>
 	</header>
 </div>
-<div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><script type="text/javascript" >
+<div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><script type="text/javascript" >
       $(document).ready(function() {
             prettyPrint();
       })
@@ -287,7 +287,7 @@
 			
 		</tbody>
 	</table>
-</div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
+</div></section></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
