--- a/persiandate.html
+++ b/persiandate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><script src="js/jquery.js"></script>
-<script src="js/main.js"></script><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="https://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
+<script src="js/main.js"></script><link rel="stylesheet" href="css/menu.css"/><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="http://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js"></script><script src="js/prettify/prettify.js"></script></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<div class="page-logo" ></div>
@@ -112,12 +112,18 @@
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
 	</p>
 	<p>
+	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
+	</p>
+	<p>
 		<a href="./persian-date-tests.html" >Tests</a>
 	</p>
 	<p>
 		<a href="https://github.com/babakhani/PersianDate" >Project on github</a>
 	</p>
-	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
+	<p>
+		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js" ><b>pwt-date.js</b> 54 kb</a>
+		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js" ><b>pwt-date.min.js </b>14 kb</a>
+	</p>
 </div>
 <div class="download-box" >
 	<a class="download-item"  href="https://github.com/babakhani/PersianDate/archive/master.zip" > <span class="download-zip"  ></span> <span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span> </a>
