Add gziped file size

--- a/persiandate.html
+++ b/persiandate.html
@@ -123,6 +123,7 @@
 	<p>
 		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js" ><b>pwt-date.js</b> 54 kb</a>
 		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js" ><b>pwt-date.min.js </b>14 kb</a>
+		<span class="direct-source-link"><b>Minify and GZip </b>4 kb</span>
 	</p>
 </div>
 <div class="download-box" >
