--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="/css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><script src="js/jquery.js"></script>
-<script src="js/main.js"></script></head><body><div id="header_wrap" class="outer">
-	<header class="inner">
-		<a href="http://babakhani.github.io/PersianWebToolkit/" >
-			<div class="page-logo" ></div>
-			<h3 id="project_title">Persian Web Toolkit</h3>
-		</a>
-		<ul id="pageHeaderMenu" class="page-header-menu" >
-			<li>
-				<a projectName="persiandate" href="persiandate.html" >Persian Date</a>
-			</li>
-			<li>
-				<a  projectName="datepicker" href="datepicker.html" >Datepicker</a>
-			</li>
-		</ul>
-	</header>
+<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><script src="/js/jquery.js"></script>
+<script src="/js/main.js"></script></head><body><div id="header_wrap" class="outer">
+    <header class="inner">
+        <a href="/">
+            <div class="page-logo"></div>
+            <h3 id="project_title">Persian Web Toolkit</h3>
+        </a>
+        <ul id="pageHeaderMenu" class="page-header-menu">
+            <li>
+                <a projectName="persiandate" href="/doc/persiandate/version.html">Persian Date</a>
+            </li>
+            <li>
+                <a projectName="datepicker" href="/doc/datepicker/version.html">Datepicker</a>
+            </li>
+        </ul>
+    </header>
 </div>
 <div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><br/>
 <br/>
-<div class="home-page-logo" ></div>
-<p >
-	Some Ui Tools Compatible With Persian Layout And <a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar" >Jalali Calendar</a>
+<div class="home-page-logo"></div>
+<p>
+    Some Ui Tools Compatible With Persian Layout And <a target="_blank"
+                                                        href="http://en.wikipedia.org/wiki/Jalali_calendar">Jalali
+    Calendar</a>
 </p>
 <ul>
-	<li>
-		<a href="http://babakhani.github.io/PersianWebToolkit/persiandate"> Persian Date</a>
-		<p>
-			javascript date library for parsing, validating, manipulating, and formatting persian dates System.
-		</p>
-	</li>
-	<li>
-		<a href="http://babakhani.github.io/PersianWebToolkit/datepicker"> Persian Date Picker</a>
-		<p>
-			jquery datepicker plugin work with Iranian calendar
-		</p>
-	</li>
+    <li>
+        <a href="doc/persiandate/version.html"> Persian Date</a>
+
+        <p>
+            javascript date library for parsing, validating, manipulating, and formatting persian dates System.
+        </p>
+    </li>
+    <li>
+        <a href="doc/datepicker/version.html"> Persian Date Picker</a>
+
+        <p>
+            jquery datepicker plugin work with Iranian calendar
+        </p>
+    </li>
 </ul></section></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
