--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="/css/pages.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><script src="/js/jquery.js"></script>
-<script src="/js/main.js"></script></head><body><div id="header_wrap" class="outer">
+<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><script src="/PersianWebToolkit/js/jquery.js"></script>
+<script src="/PersianWebToolkit/js/main.js"></script></head><body><div id="header_wrap" class="outer">
     <header class="inner">
         <a href="/">
             <div class="page-logo"></div>
@@ -9,10 +9,10 @@
         </a>
         <ul id="pageHeaderMenu" class="page-header-menu">
             <li>
-                <a projectName="persiandate" href="/doc/persiandate/version.html">Persian Date</a>
+                <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
             </li>
             <li>
-                <a projectName="datepicker" href="/doc/datepicker/version.html">Datepicker</a>
+                <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">Datepicker</a>
             </li>
         </ul>
     </header>
@@ -27,14 +27,14 @@
 </p>
 <ul>
     <li>
-        <a href="doc/persiandate/version.html"> Persian Date</a>
+        <a href="/PersianWebToolkit/doc/persiandate/version.html"> Persian Date</a>
 
         <p>
             javascript date library for parsing, validating, manipulating, and formatting persian dates System.
         </p>
     </li>
     <li>
-        <a href="doc/datepicker/version.html"> Persian Date Picker</a>
+        <a href="/PersianWebToolkit/doc/datepicker/version.html"> Persian Date Picker</a>
 
         <p>
             jquery datepicker plugin work with Iranian calendar
