--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><link rel="stylesheet" href="/PersianWebToolkit/css/menu.css"/><link rel="stylesheet" href="/PersianWebToolkit/lib/prettify/theme/desert.css"/><link rel="stylesheet" href="/PersianWebToolkit/lib/bootstrap/css/bootstrap.css"/><link rel="stylesheet" href="/PersianWebToolkit/css/pages.css"/><script src="/PersianWebToolkit/lib/jquery/jquery-1.11.2.js"></script><script src="/PersianWebToolkit/lib/prettify/prettify.js"></script><script src="/PersianWebToolkit/lib/bootstrap/js/bootstrap.js"></script><script src="/PersianWebToolkit/lib/persian-date-0.1.8b.js"></script><script src="/PersianWebToolkit/js/main.js"></script></head><body><div id="header_wrap" class="outer">
-    <header class="inner">
-        <a href="/PersianWebToolkit">
-            <div class="page-logo"></div>
-            <h3 id="project_title">Persian Web Toolkit</h3>
-        </a>
-        <ul id="pageHeaderMenu" class="page-header-menu">
-            <li>
-                <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
-            </li>
-            <li>
-                <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">Datepicker</a>
-            </li>
-        </ul>
-    </header>
-</div>
-<div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><br/>
+<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><link rel="stylesheet" href="/PersianWebToolkit/css/menu.css"/><link rel="stylesheet" href="/PersianWebToolkit/lib/prettify/theme/desert.css"/><link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/><link rel="stylesheet" href="/PersianWebToolkit/css/pages.css"/><link rel="stylesheet" href="/PersianWebToolkit/css/over-bootstrap.css"/><script src="/PersianWebToolkit/lib/jquery/jquery-1.11.2.min.js"></script><script src="/PersianWebToolkit/lib/prettify/prettify.js"></script><script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script><script src="/PersianWebToolkit/lib/persian-date-0.1.8b.js"></script><script src="/PersianWebToolkit/js/main.js"></script></head><body><!-- Fixed navbar -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/PersianWebToolkit" class="navbar-brand">
+                <div class="page-logo"></div>
+                Persian Web Toolkit
+            </a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
+                </li>
+                <li >
+                    <a href="/PersianWebToolkit/doc/datepicker/version.html" >
+                        Datepicker
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><br/>
 <br/>
 <div class="home-page-logo"></div>
 <p>
@@ -39,7 +52,7 @@
             jquery datepicker plugin work with Iranian calendar
         </p>
     </li>
-</ul></section></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
+</ul></section></div></div><div id="footer_wrap" class="outer"></div><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
@@ -48,4 +61,4 @@ try{
 var pageTracker = _gat._getTracker("UA-40548780-1");
 pageTracker._trackPageview();
 } catch(err) {}
-</script></p></footer></div></body></html>
+</script></p></footer></body></html>
