--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     javascript date library for parsing, validating, manipulating, and formatting persian dates System.
                 </p>
                 <p>
-                    <a class="btn btn-default" href="https://github.com/babakhani/pwt.datepicker">Github</a>
+                    <a class="btn btn-default github-link" href="https://github.com/babakhani/pwt.datepicker">Github</a>
                     <a class="btn btn-primary" href="/PersianWebToolkit/doc/persiandate/version.html">Document</a>
                 </p>
             </div>
@@ -56,7 +56,7 @@
                     jquery datepicker plugin work with Iranian calendar.
                 </p>
                 <p>
-                    <a class="btn btn-default" href="https://github.com/babakhani/PersianDate">Github</a>
+                    <a class="btn btn-default  github-link" href="https://github.com/babakhani/PersianDate">Github</a>
                     <a class="btn btn-primary" href="/PersianWebToolkit/doc/datepicker/version.html">Document</a>
                 </p>
             </div>
