Add index.html to doc root

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </p>
                 <p>
                     <a class="btn btn-default github-link" href="https://github.com/babakhani/pwt.datepicker">Github</a>
-                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/persiandate/version.html">Document</a>
+                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/persiandate/">Document</a>
                 </p>
             </div>
             <div class="col-md-4 product-box">
@@ -57,7 +57,7 @@
                 </p>
                 <p>
                     <a class="btn btn-default  github-link" href="https://github.com/babakhani/PersianDate">Github</a>
-                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/datepicker/version.html">Document</a>
+                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/datepicker/">Document</a>
                 </p>
             </div>
             <div class="col-md-4 product-box">
@@ -66,8 +66,9 @@
                     Persian Heat chart.
                     A heat map is a graphical representation of data where the individual values contained in a matrix are represented as colors.
                 </p>
-                <p>
-                    <a class="btn  btn-disabled">Coming Soon !</a>
+                 <p>
+                    <a class="btn btn-default  github-link" href="https://github.com/babakhani/pwt.calheatmap">Github</a>
+                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/calheatmap/">Document</a>
                 </p>
             </div>
         </div>
